--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,3 +1,4 @@
+/* Eric Meyer's reset.css, available at http://meyerweb.com/eric/tools/css/reset/ */
 /* v1.0 | 20080212 */
 
 html, body, div, span, applet, object, iframe,
