--- a/cyborgminion/cyborgminion.css
+++ b/cyborgminion/cyborgminion.css
@@ -30,14 +30,32 @@
 	display: block;
 }
 
-#gameboard li.square {
+#gameboard li.square,
+#gameboard li.score {
 	display: inline-block;
 	width: 50px;
 	height: 50px;
 	margin: 5px;
-	border: 1px solid black;
 	font-size: 2em;
 	font-weight: bold;
 	text-align: center;
 	vertical-align: middle;
+}
+
+#gameboard li.square {
+	border: 1px solid black;
+}
+
+#gameboard li.score {
+	border: 1px solid green;
+	color: green;
+}
+
+#gameboard li.score.lowest {
+	background-color: #FCC;
+}
+
+#gameboard li#score_current {
+	border: 1px solid red;
+	color: red;
 }
