Adding in my revisioning for stars

--- a/canvas/stars/v1.css
+++ b/canvas/stars/v1.css
@@ -1,5 +1,5 @@
 /*
- * Fireworks
+ * Stars
  * Copyright (c) 2009 Brian Arnold
  * Software licensed under MIT license, see http://www.randomthink.net/lab/LICENSE
  */
